--- a/index.html
+++ b/index.html
@@ -2,108 +2,122 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>NeuroGen</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: #0b0f1a;
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      padding: 0;
+      background: #0b1324;
+      color: #e5f0ff;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+    }
+
+    .app {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    .header {
+      font-size: 18px;
+      font-weight: 600;
+      margin-bottom: 16px;
     }
 
     .chat {
-      width: 100%;
-      max-width: 420px;
-      background: #11162a;
+      background: #111b34;
+      border-radius: 12px;
       padding: 16px;
-      border-radius: 8px;
-      box-sizing: border-box;
-    }
-
-    .messages {
-      height: 300px;
-      overflow-y: auto;
-      margin-bottom: 10px;
+      min-height: 300px;
+      margin-bottom: 16px;
     }
 
     .msg {
-      margin-bottom: 8px;
+      margin-bottom: 12px;
+      line-height: 1.5;
     }
 
     .user {
-      color: #4ea1ff;
+      color: #5da9ff;
     }
 
     .bot {
-      color: #a6ffb0;
+      color: #7CFFB2;
     }
 
-    input, button {
-      width: 100%;
-      padding: 10px;
-      margin-top: 6px;
+    .input-row {
+      display: flex;
+      gap: 10px;
+    }
+
+    input {
+      flex: 1;
+      padding: 12px;
+      border-radius: 8px;
       border: none;
-      border-radius: 4px;
-      box-sizing: border-box;
+      outline: none;
+      font-size: 16px;
     }
 
     button {
-      background: #22c55e;
-      font-weight: bold;
+      padding: 12px 18px;
+      border-radius: 8px;
+      border: none;
+      font-size: 16px;
       cursor: pointer;
+      background: #2ECC71;
+      color: #000;
+      font-weight: 600;
     }
   </style>
 </head>
+
 <body>
+  <div class="app">
+    <div class="header">NeuroGen online. Speak.</div>
 
-  <div class="chat">
-    <div class="messages" id="messages">
-      <div class="msg bot">NeuroGen online. Speak.</div>
+    <div id="chat" class="chat"></div>
+
+    <div class="input-row">
+      <input id="input" placeholder="Ask NeuroGen..." />
+      <button onclick="send()">Send</button>
     </div>
-
-    <input id="input" placeholder="Ask NeuroGen..." />
-    <button onclick="send()">Send</button>
   </div>
 
   <script>
-    const API_URL = "https://neurogen.up.railway.app/ask";
-    const messages = document.getElementById("messages");
+    const chat = document.getElementById("chat");
     const input = document.getElementById("input");
 
     function add(role, text) {
       const div = document.createElement("div");
       div.className = "msg " + role;
-      div.textContent = (role === "user" ? "You: " : "NeuroGen: ") + text;
-      messages.appendChild(div);
-      messages.scrollTop = messages.scrollHeight;
+      div.innerText = text;
+      chat.appendChild(div);
+      chat.scrollTop = chat.scrollHeight;
     }
 
     async function send() {
-      const text = input.value.trim();
-      if (!text) return;
+      const message = input.value.trim();
+      if (!message) return;
 
-      add("user", text);
+      add("user", "You: " + message);
       input.value = "";
 
       try {
-        const res = await fetch(API_URL, {
+        const res = await fetch("https://neurogen.up.railway.app/ask", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ message: text })
+          body: JSON.stringify({ message })
         });
 
         const data = await res.json();
-        add("bot", data.reply || "No response.");
-      } catch (err) {
-        add("bot", "Connection error.");
+        add("bot", "NeuroGen: " + (data.reply || "No response."));
+      } catch (e) {
+        add("bot", "NeuroGen: Connection error.");
       }
     }
   </script>
-
 </body>
 </html>
