--- a/index.html
+++ b/index.html
@@ -24,8 +24,15 @@
       padding: 14px 18px;
       background: #020617;
       border-bottom: 1px solid #1e293b;
+    }
+
+    header span {
       font-weight: 600;
-      font-size: 16px;
+    }
+
+    header small {
+      opacity: 0.7;
+      font-size: 12px;
     }
 
     #chat {
@@ -69,11 +76,9 @@
       flex: 1;
       padding: 12px;
       border-radius: 8px;
-      border: none;
-      outline: none;
+      border: 1px solid #1e293b;
       background: #020617;
       color: white;
-      border: 1px solid #1e293b;
       font-size: 15px;
     }
 
@@ -96,7 +101,10 @@
 
 <body>
 
-  <header>NeuroGen</header>
+  <header>
+    <span>NeuroGen</span><br />
+    <small id="datetime"></small>
+  </header>
 
   <div id="chat">
     <div class="msg bot">Hello. I am NeuroGen.</div>
@@ -111,8 +119,16 @@
     const chat = document.getElementById("chat");
     const input = document.getElementById("input");
     const sendBtn = document.getElementById("send");
+    const datetimeEl = document.getElementById("datetime");
 
     const API_URL = "https://neurogen.up.railway.app/ask";
+
+    function updateDateTime() {
+      const now = new Date();
+      datetimeEl.textContent = now.toLocaleString();
+    }
+    setInterval(updateDateTime, 1000);
+    updateDateTime();
 
     function addMessage(text, type) {
       const div = document.createElement("div");
@@ -130,7 +146,10 @@
       input.value = "";
       sendBtn.disabled = true;
 
-      addMessage("Thinking...", "bot");
+      const thinking = document.createElement("div");
+      thinking.className = "msg bot";
+      thinking.textContent = "Thinking…";
+      chat.appendChild(thinking);
 
       try {
         const res = await fetch(API_URL, {
@@ -140,18 +159,18 @@
         });
 
         const data = await res.json();
-        chat.lastChild.textContent = data.reply || "No response.";
+        thinking.textContent = data.reply || "No response.";
 
-      } catch (err) {
-        chat.lastChild.textContent = "Connection error.";
+      } catch {
+        thinking.textContent = "Connection error.";
       }
 
       sendBtn.disabled = false;
+      chat.scrollTop = chat.scrollHeight;
     }
 
     sendBtn.onclick = sendMessage;
-
-    input.addEventListener("keydown", (e) => {
+    input.addEventListener("keydown", e => {
       if (e.key === "Enter") sendMessage();
     });
   </script>
