--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     const sendBtn = document.getElementById("send");
     const datetimeEl = document.getElementById("datetime");
 
-    const API_URL = "https://neurogen.up.railway.app/ask";
+    const API_URL = "https://neurogen.up.railway.app/ai/chat";
 
     function updateDateTime() {
       const now = new Date();
