--- a/index.html
+++ b/index.html
@@ -116,97 +116,51 @@
   </footer>
 
   <script>
-  // ===============================
-  // ELEMENTS
-  // ===============================
+const BACKEND_URL = "https://neurogen.up.railway.app/chat"; // your backend
+
+async function sendMessage() {
+  const input = document.getElementById("userInput");
   const chat = document.getElementById("chat");
-  const input = document.getElementById("input");
-  const sendBtn = document.getElementById("send");
-  const datetimeEl = document.getElementById("datetime");
 
-  // ===============================
-  // BACKEND ENDPOINT (MATCHES index.js)
-  // ===============================
-  const API_URL = "https://neurogen.up.railway.app/ai/chat";
+  const userText = input.value.trim();
+  if (userText === "") return;
 
-  // ===============================
-  // DATE & TIME
-  // ===============================
-  function updateDateTime() {
-    const now = new Date();
-    datetimeEl.textContent = now.toLocaleString();
+  appendMessage("You", userText);
+  input.value = "";
+
+  try {
+    const response = await fetch(BACKEND_URL, {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json"
+      },
+      body: JSON.stringify({
+        message: userText
+      })
+    });
+
+    const data = await response.json();
+    appendMessage("NeuroGen", data.reply);
+
+  } catch (error) {
+    appendMessage(
+      "NeuroGen",
+      "I lost connection for a moment. Talk to me again."
+    );
   }
-  setInterval(updateDateTime, 1000);
-  updateDateTime();
+}
 
-  // ===============================
-  // UI HELPERS
-  // ===============================
-  function addMessage(text, type) {
-    const div = document.createElement("div");
-    div.className = "msg " + type;
-    div.textContent = text;
-    chat.appendChild(div);
-    chat.scrollTop = chat.scrollHeight;
-  }
+function appendMessage(sender, text) {
+  const chat = document.getElementById("chat");
+  const message = document.createElement("div");
 
-  function addThinking() {
-    const div = document.createElement("div");
-    div.className = "msg bot";
-    div.textContent = "Thinking...";
-    chat.appendChild(div);
-    chat.scrollTop = chat.scrollHeight;
-    return div;
-  }
+  message.className = sender === "You" ? "user-message" : "ai-message";
+  message.innerHTML = `<strong>${sender}:</strong> ${text}`;
 
-  // ===============================
-  // SEND MESSAGE
-  // ===============================
-  async function sendMessage() {
-    const message = input.value.trim();
-    if (!message) return;
-
-    addMessage(message, "user");
-    input.value = "";
-    sendBtn.disabled = true;
-
-    const thinking = addThinking();
-
-    try {
-      const res = await fetch(API_URL, {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({ message })
-      });
-
-      const data = await res.json();
-
-      thinking.textContent =
-        data.reply ||
-        data.error ||
-        "No response from NeuroGen.";
-
-    } catch (err) {
-      thinking.textContent = "Connection error. Check network.";
-    }
-
-    sendBtn.disabled = false;
-    chat.scrollTop = chat.scrollHeight;
-  }
-
-  // ===============================
-  // EVENTS
-  // ===============================
-  sendBtn.onclick = sendMessage;
-
-  input.addEventListener("keydown", (e) => {
-    if (e.key === "Enter") {
-      sendMessage();
-    }
-  });
-</script>
-        
+  chat.appendChild(message);
+  chat.scrollTop = chat.scrollHeight;
+}
+  </script>
+  
 </body>
 </html>
