Refactor styles and improve chat functionality

--- a/index.html
+++ b/index.html
@@ -13,87 +13,92 @@
 
     body {
       margin: 0;
-      background: #0f172a;
-      color: #e5e7eb;
+      background: #ffffff;
+      color: #111827;
       display: flex;
       flex-direction: column;
       height: 100vh;
     }
 
     header {
-      padding: 14px 18px;
-      background: #020617;
-      border-bottom: 1px solid #1e293b;
-    }
-
-    header span {
+      padding: 14px 20px;
+      border-bottom: 1px solid #e5e7eb;
       font-weight: 600;
-    }
-
-    header small {
-      opacity: 0.7;
-      font-size: 12px;
+      background: #ffffff;
     }
 
     #chat {
       flex: 1;
       overflow-y: auto;
-      padding: 16px;
+      padding: 24px;
       display: flex;
       flex-direction: column;
-      gap: 12px;
+      gap: 20px;
+      background: #ffffff;
     }
 
     .msg {
-      max-width: 85%;
-      padding: 12px 14px;
+      max-width: 720px;
+      width: 100%;
+      padding: 16px 18px;
       border-radius: 12px;
-      line-height: 1.4;
+      line-height: 1.6;
+      font-size: 15px;
       white-space: pre-wrap;
     }
 
     .user {
       align-self: flex-end;
-      background: #2563eb;
-      color: white;
+      background: #f9fafb;
+      border: 1px solid #e5e7eb;
     }
 
     .bot {
       align-self: flex-start;
-      background: #020617;
-      border: 1px solid #1e293b;
+      background: #ffffff;
+      border: 1px solid #e5e7eb;
     }
 
     footer {
-      padding: 12px;
-      background: #020617;
-      border-top: 1px solid #1e293b;
+      padding: 16px;
+      border-top: 1px solid #e5e7eb;
+      background: #ffffff;
+      display: flex;
+      justify-content: center;
+    }
+
+    .input-box {
+      max-width: 720px;
+      width: 100%;
       display: flex;
       gap: 10px;
     }
 
     input {
       flex: 1;
-      padding: 12px;
-      border-radius: 8px;
-      border: 1px solid #1e293b;
-      background: #020617;
-      color: white;
+      padding: 14px 16px;
+      border-radius: 10px;
+      border: 1px solid #d1d5db;
       font-size: 15px;
+      outline: none;
+    }
+
+    input:focus {
+      border-color: #10a37f;
     }
 
     button {
       padding: 0 18px;
-      border-radius: 8px;
+      border-radius: 10px;
       border: none;
-      background: #22c55e;
-      color: black;
+      background: #10a37f;
+      color: white;
       font-weight: 600;
       cursor: pointer;
     }
 
     button:disabled {
-      opacity: 0.5;
+      opacity: 0.6;
       cursor: not-allowed;
     }
   </style>
@@ -101,66 +106,64 @@
 
 <body>
 
-  <header>
-    <span>NeuroGen</span><br />
-    <small id="datetime"></small>
-  </header>
+<header>NeuroGen</header>
 
-  <div id="chat">
-    <div class="msg bot">Hello. I am NeuroGen.</div>
-  </div>
+<div id="chat">
+  <div class="msg bot">Hello. I’m NeuroGen.</div>
+</div>
 
-  <footer>
-    <input id="input" placeholder="Ask NeuroGen..." />
+<footer>
+  <div class="input-box">
+    <input id="input" placeholder="Message NeuroGen…" />
     <button id="send">Send</button>
-  </footer>
+  </div>
+</footer>
 
-  <script>
-const BACKEND_URL = "https://neurogen.up.railway.app/chat"; // your backend
+<script>
+const BACKEND_URL = "https://neurogen.up.railway.app/chat";
+
+const input = document.getElementById("input");
+const sendBtn = document.getElementById("send");
+const chat = document.getElementById("chat");
+
+sendBtn.addEventListener("click", sendMessage);
+input.addEventListener("keydown", (e) => {
+  if (e.key === "Enter") sendMessage();
+});
 
 async function sendMessage() {
-  const input = document.getElementById("userInput");
-  const chat = document.getElementById("chat");
+  const text = input.value.trim();
+  if (!text) return;
 
-  const userText = input.value.trim();
-  if (userText === "") return;
-
-  appendMessage("You", userText);
+  addMessage(text, "user");
   input.value = "";
+  sendBtn.disabled = true;
 
   try {
     const response = await fetch(BACKEND_URL, {
       method: "POST",
-      headers: {
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify({
-        message: userText
-      })
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ message: text })
     });
 
     const data = await response.json();
-    appendMessage("NeuroGen", data.reply);
+    addMessage(data.reply, "bot");
 
-  } catch (error) {
-    appendMessage(
-      "NeuroGen",
-      "I lost connection for a moment. Talk to me again."
-    );
+  } catch {
+    addMessage("I’m still here. Try again.", "bot");
   }
+
+  sendBtn.disabled = false;
 }
 
-function appendMessage(sender, text) {
-  const chat = document.getElementById("chat");
-  const message = document.createElement("div");
-
-  message.className = sender === "You" ? "user-message" : "ai-message";
-  message.innerHTML = `<strong>${sender}:</strong> ${text}`;
-
-  chat.appendChild(message);
+function addMessage(text, type) {
+  const msg = document.createElement("div");
+  msg.className = `msg ${type}`;
+  msg.textContent = text;
+  chat.appendChild(msg);
   chat.scrollTop = chat.scrollHeight;
 }
-  </script>
-  
+</script>
+
 </body>
 </html>
