Update BACKEND_URL in index.html

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </footer>
 
 <script>
-const BACKEND_URL = "https://neurogen.up.railway.app/chat";
+const BACKEND_URL = "https://neurogen.up.railway.app";
 
 const input = document.getElementById("input");
 const sendBtn = document.getElementById("send");
