--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
   <div class="input-box">
     <input id="input" placeholder="Message NeuroGen…" />
     <button id="send">Send</button>
+  <div style="text-align:center; font-size:12px; margin-bottom:6px;">
+  <label>
+    <input type="checkbox" id="modeToggle" />
+    Intelligent mode
+  </label>
   </div>
 </footer>
 
@@ -211,6 +216,28 @@ function addMessage(text, type) {
   chat.appendChild(msg);
   chat.scrollTop = chat.scrollHeight;
 }
+  // ===== NeuroGen Mode Toggle Layer (ADD-ONLY) =====
+(function () {
+  const toggle = document.getElementById("modeToggle");
+  if (!toggle) return;
+
+  // Default endpoint remains /chat
+  let activeEndpoint = "/chat";
+
+  toggle.addEventListener("change", () => {
+    activeEndpoint = toggle.checked ? "/execute" : "/chat";
+  });
+
+  // Hijack ONLY the endpoint value, not logic
+  const originalFetch = window.fetch;
+
+  window.fetch = function (url, options) {
+    if (typeof url === "string" && url.endsWith("/chat")) {
+      url = url.replace("/chat", activeEndpoint);
+    }
+    return originalFetch(url, options);
+  };
+})();
 </script>
 
 </body>
