--- a/index.html
+++ b/index.html
@@ -254,7 +254,22 @@ function addMessage(text, type) {
 
     return originalFetch(url, options);
   };
-})(); 
+})();
+
+  // ===== NeuroGen Intelligent Mode v3 Override (ADD-ONLY) =====
+(function () {
+  const originalFetch = window.fetch;
+
+  window.fetch = function (url, options) {
+    if (
+      typeof url === "string" &&
+      url.endsWith("/execute.v2")
+    ) {
+      url = url.replace("/execute.v2", "/execute.v3");
+    }
+    return originalFetch(url, options);
+  };
+})();
 </script>
 
 </body>
