--- a/index.html
+++ b/index.html
@@ -284,6 +284,20 @@ function addMessage(text, type) {
     return originalFetch(url, options);
   };
 })();
+  // ===== NeuroGen SINGLE-BRAIN LOCK (EXECUTE.V3 ONLY, ADD-ONLY) =====
+(function () {
+  const originalFetch = window.fetch;
+
+  window.fetch = function (url, options) {
+    if (typeof url === "string") {
+      // Force ALL chat traffic to execute.v3
+      if (url.includes("/chat") || url.includes("/execute")) {
+        url = url.replace(/\/(chat|execute(\.v\d+)?)/, "/execute.v3");
+      }
+    }
+    return originalFetch(url, options);
+  };
+})();
 </script>
 
 </body>
